--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,22 +1,31 @@
-name: k6 Load Test
+name: k6 Cloud Load Test
 
+# Запускати на push до будь-якої гілки
 on:
   push:
     branches:
       - '**'
 
 jobs:
-  run-test:
+  run-cloud-test:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Крок: Отримуємо репозиторій
       - name: Checkout project
         uses: actions/checkout@v4
 
+      # 2️⃣ Крок: Встановлюємо k6
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
 
-      - name: Run k6 test
+      # 3️⃣ Крок: Запускаємо тест у Grafana Cloud
+      - name: Run cloud k6 test
         uses: grafana/run-k6-action@v1
+        env:
+          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
+          K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: test.js
+          cloud: true   # ✅ Відправляти результати у Grafana Cloud
+
