Refactor k6 workflow for better readability
Updated k6 workflow to improve clarity and functionality.

--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,6 +1,5 @@
 name: k6 Cloud Load Test
 
-# Запускати на push до будь-якої гілки
 on:
   push:
     branches:
@@ -11,21 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Крок: Отримуємо репозиторій
       - name: Checkout project
         uses: actions/checkout@v4
 
-      # 2️⃣ Крок: Встановлюємо k6
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
 
-      # 3️⃣ Крок: Запускаємо тест у Grafana Cloud
-      - name: Run cloud k6 test
+      - name: Run k6 test in Grafana Cloud
         uses: grafana/run-k6-action@v1
         env:
           K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
           K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: test.js
-          cloud: true   # ✅ Відправляти результати у Grafana Cloud
+          cloud-run-locally: true      # ✅ Відправка результатів у Grafana Cloud
+          cloud-comment-on-pr: false   # за бажанням, коментар на PR
+
 
