--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,4 +1,4 @@
-name: k6 Cloud Load Test
+name: k6 Load Test
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - '**'
 
 jobs:
-  run-cloud-test:
+  run-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,14 +16,10 @@ jobs:
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
 
-      - name: Run k6 test in Grafana Cloud
+      - name: Run k6 test
         uses: grafana/run-k6-action@v1
-        env:
-          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
-          K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: test.js
-          cloud-run-locally: true      # ✅ Відправка результатів у Grafana Cloud
-          cloud-comment-on-pr: false   # за бажанням, коментар на PR
+
 
 
